recipes all pages done. nav bar added.

--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -1,4 +1,13 @@
-<h1>Recipes</h1>
-<% @recipes.each do |recipe| %>
-  <li><%= recipe.instructions %></li>
-<% end %>
+<h1 class = "text-center">All Recipes</h1>
+
+<ul>
+
+  <% @recipes.each do |recipe| %>
+    <li><%= link_to "#{recipe.name}", recipe_path(recipe)%></li>
+  <% end %>
+
+</ul>
+
+
+
+
