--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,41 +1,28 @@
-<ul><h1>Create A New User</h1></ul>
-<%= form_with( model: @user ) do | form | %>
-    <ul>
-    <li>
+<h1>Create A New User</h1>
+<%= form_for @user do | form | %>
     <div class="form-group row">
         <div class ="col-auto">
             <p><%= form.label "Username" %></p>
-            <% name_error_class = 'is-invalid' if(@errors["username"]) %>
-            <%= form.text_field :username, class: "form-control #{name_error_class}" %>
-            <% (@errors["username"] || [] ).each do | message | %>
-                <span class="invalid-feedback"><%= message %></span>
-            <% end %>
+            <%= form.text_field :username %>
         </div>
     </div>
-    </li>
-    <li>
+  
     <div class="form-group row">   
         <div class ="col-auto">
             <p><%= form.label "Password" %></p>
-            <% name_error_class = 'is-invalid' if(@errors["password"]) %>
-            <%= form.password_field :password, class: "form-control #{ @errors["password"] ? 'is-invalid' : '' }" %>
-            <% (@errors["password"] || [] ).each do | message | %>
-                <span class="invalid-feedback"><%= message %></span>
-            <% end %>
+            <%= form.password_field :password %>
         </div>
     </div>
-   </li>
 
-    <li>
+
     <div class="form-group row">   
         <div class ="col-auto">
             <p><%= form.label "Password Confirmation" %></p>
             <%= form.password_field :password_confirmation %>
         </div>
     </div>
-   </li>
 
-    <li>
+
     <div class="form-group">
         <h2><% form.label "Translator" %></h2>
         <p>Do you want to translate Chinese-language recipes into English?</p>
