--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,7 @@
 <h1>My Page</h1>
+<% if current_user %>
+ Logged in as <%= current_user.username %>
+<% end %>
 <ul>
 
 <h2>Username:<%= @user.username%></h2>
@@ -18,3 +21,5 @@
 </li> 
  
 </ul>
+
+<%= button_to "Log out", session_path("current"),  method:"delete", class: "btn btn-success" %>
