--- a/app/views/recipes/edit.html.erb
+++ b/app/views/recipes/edit.html.erb
@@ -32,6 +32,12 @@
         </div>
     </div> 
 
+    <div class="form-group row">
+        <div class ="col-auto">  
+            <p><%= form.label "Ingredients" %></p>
+            <%= form.collection_select :ingredient_ids, Ingredient.all, :id, :name, {}, {multiple: true} %>
+        </div>
+    </div> 
 
     <div class="form-group row">
         <div class ="col-auto"> 
