--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,5 +1,7 @@
 <h1>All Users</h1>
 <% @users.each do | user | %>
     <p><%= link_to "#{user.username}", user_path(user)%>
-    <p>Translator for Chinese-language recipe: <%= "#{user.translator}" %>
+    <p>Translator for Chinese-language recipe? 
+    <%= "Yes" if user.translator == true %>
+    <%= "No" if user.translator == false %>
 <%end%>
