cook_book and recipe join table

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,7 +26,7 @@
       </li>
 
       <li class="nav-item">
-        <a class="nav-link <%= request.env['PATH_INFO'].starts_with?('/users') ? 'active' : '' %>" href="/users/new">My Page</a>
+        <a class="nav-link <%= request.env['PATH_INFO'].starts_with?('/users') ? 'active' : '' %>" href="/sessions/new">My Page</a>
       </li>
 
       <li class="nav-item">
