--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,24 +1,26 @@
-<h1>My Page</h1>
+<h1>My Kitchen</h1>
 <% if current_user %>
- Logged in as <%= current_user.username %>
+ <strong>Logged in as <%= current_user.username %></strong>
 <% end %>
-<ul>
+<br>
+<br>
+<br>
+<br>
+<br>
 
-<h2>Username:<%= @user.username%></h2>
-
-<li>
-<h2>My Cookbook</h2>
+<h4>My Cookbook</h4>
 <% @user.cook_books.each do |cook_book|%></p>
-    <p><%= cook_book.name %>
+    <li><%= cook_book.name %></li>
 <%end%>
-</li>
 
-<li>
-<h2>All Recipes Submitted by Me</h2>
+<h3><%= button_to "Create a new cookbook", new_cook_book_path,  method:"get", class: "btn btn-success" %></h3>
+<h3><%= button_to "Create a new recipe", new_recipe_path,  method:"get", class: "btn btn-success" %></h3>
+
+
+<h4>All Recipes Submitted by Me</h4>
 <% @user.recipes.each do |recipe|%></p>
     <p><%= recipe.name %>
 <%end%>
-</li> 
  
 </ul>
 
