user cook_book association complete

--- a/app/views/cook_books/new.html.erb
+++ b/app/views/cook_books/new.html.erb
@@ -4,8 +4,9 @@
     <div class="form-group row">
         <div class ="col-auto">
             <%= form.label "cookbook name" %>
-            <%= form.text_field :name %>
+            <%= form.text_field :name %><br>
         </div>
     </div>
 <%= form.submit "Create this cookbook", class: "btn btn-primary" %>
 <% end %>
+ 
