ingredients pages working.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,13 +11,8 @@
       <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
       <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-   
-  </head>
-
-  <body>
-
   
-  <div class="container">
+    <div class="container">
     <nav class="nav nav-pills nav-fill sticky-top">
       <a class="navbar-brand" href="/sessions">MasterChef</a>
 
@@ -32,6 +27,10 @@
       <li class="nav-item">
         <a class="nav-link <%= request.env['PATH_INFO'].starts_with?('/recipes') ? 'active' : '' %>" href="/recipes" >Recipes</a>
       </li>
+
+      <li class="nav-item">
+        <a class="nav-link <%= request.env['PATH_INFO'].starts_with?('/ingredients') ? 'active' : '' %>" href="/ingredients" >Ingredients</a>
+      </li>
       
       <li class="nav-item">
         <a class="nav-link" href ="/static/analytics">Analytics</a>
@@ -42,6 +41,12 @@
       </li>
     </nav>
   </div>
+    
+  </head>
+
+  <body>
+
+
 
 
   <div class="container">
