--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -82,8 +82,7 @@
 </tr>
 
 <tr>
-  <p>Language of the Recipe: </p>
-    <%= @recipe.language %>
+  <p>Language of the Recipe: <%= @recipe.language %>
 </tr>
 
 <tr>
