--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,6 +13,7 @@
 
  *= require_tree .
  *= require_self
+ *= require chosen
  
  */
 
@@ -29,3 +30,4 @@ body {
   background-size: cover;
   -o-background-size: cover;
 }
+
