--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -1,11 +1,16 @@
+<p>
+<p>
 <h1 class = "text-center">All Recipes</h1>
-
+<p>
 <ul>
 
   <% @recipes.each do |recipe| %>
-    <li><%= link_to "#{recipe.name}", recipe_path(recipe)%>  <%= recipe.likes%> Liked</li>
+    <li><h4><%= link_to "#{recipe.name}", recipe_path(recipe)%></h4></li>
+    <p> <%= recipe.likes%> Liked! </p>
     <p><small>Ingredients: 
-    <%= raw recipe.ingredients.map(&:name).map { |i| link_to i, ingredient_path(i) }.join(', ') %></small></p>
+    <% recipe.ingredients.each do | ingredient |%>
+      <%= link_to "#{ingredient.name}", ingredient_path(ingredient)%>,
+    <% end %></small></p>
   <% end %>
 
 </ul>
