--- a/app/views/recipes/new.html.erb
+++ b/app/views/recipes/new.html.erb
@@ -34,12 +34,14 @@
 
     <div class="form-group row">
         <div class ="col-auto">  
-            <p><% form.label "Ingredients" %>Select from currently available ingredients:</p>
-            <%= form.collection_select :ingredient_ids, Ingredient.all, :id, :name, {}, {multiple: true} %>
+            <h4><% form.label "Ingredients" %>Select from currently available ingredients:</h4>
+            <p></p><%= form.collection_check_boxes :ingredient_ids, Ingredient.all, :id, :name %>
             <p>
-            <p><% form.label "Ingredients" %>Add new ingredients:
+            <h4><% form.label "Ingredients" %>Add new ingredients:</h4>
             <p><%= form.fields_for :ingredients, @recipe.ingredients.build do |ingredients_fields| %>
-                <%= ingredients_fields.text_field :name %>
+                <p><%= ingredients_fields.label "Name"%>: <%= ingredients_fields.text_field :name %>
+                <p><%= ingredients_fields.label "Description"%>: <%= ingredients_fields.text_field :description %>
+                <p><%= ingredients_fields.label "Origin Country"%>: <%= ingredients_fields.text_field :origin_country %>
             <% end %>
         </div>
     </div> 
