new background for users/recipes controllers; add likes function fixed

--- a/app/views/ingredients/show.html.erb
+++ b/app/views/ingredients/show.html.erb
@@ -1,17 +1,17 @@
 <p>
-<h2 class = "text-center"><%= @ingredient.name %></h2>
+<h2 class = "text-center text-light"><%= @ingredient.name %></h2>
 
 <ul>
 <div class="table-responsive-xl">
 <table class="table">
 
 <tr>
-  <p>Description: <%= @ingredient.description %>
+  <p class = "text-center text-light">Description: <%= @ingredient.description %>
 </tr>
 
 
 <tr>
-  <p>Origin Country: <%= @ingredient.origin_country %>
+  <p class = "text-center text-light">Origin Country: <%= @ingredient.origin_country %>
 </tr>
 
 
