--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -3,7 +3,7 @@
 
 <ul>
 <div class="table-responsive-xl">
-<table class="table">
+<table class="table" >
 
 <tr>
   <p><img src= "<%= @recipe.img_url %>" class="rounded" height="600" width="500">
@@ -15,7 +15,7 @@
 
 
 <tr>
-  <p>Sweet Level: <%= @recipe.sugar_level %>
+  <p >Sweet Level: <%= @recipe.sugar_level %>
 </tr>
 
 <tr>
@@ -88,7 +88,7 @@
 <tr>
   <%= form_tag action = "/recipes/#{@recipe.id}/add_likes", method: 'put' do %>
   <%= submit_tag "Like", class: "btn btn-danger"%> 
-      <%= @recipe.likes %>
+      <span> <%= @recipe.likes %></span> 
   <%end%>
 </tr>
 
