--- a/app/views/cook_books/show.html.erb
+++ b/app/views/cook_books/show.html.erb
@@ -1,13 +1,23 @@
-<h1><%= @cook_book.name %></h1>
+<h1 style = "margin-left:160px"><%= @cook_book.name %></h1>
 <br>
-<p>What would you like to eat today?</p>
+<p class = "text-light" style = "margin-left:160px">What would you like to eat today?</p>
 <% @cook_book.recipes.each do |recipe| %>
-  <ol><%= link_to recipe.name, recipe_path(recipe) %> 
+  <ol style = "margin-left:120px"><h5 class = "text-light"><%= link_to recipe.name, recipe_path(recipe) %> </h5>
   </ol>
 <% end %>
 
 <!-- <a href="/cook_books/<%= @cook_book.id%>/edit">Edit Cook Book</a> -->
-<%= button_to "Add new recipe", edit_cook_book_path,  method: :get, class: "btn btn-success" %><br>
-<%= form_for @cook_book, method: :delete do |form| %>
-<%= form.submit "Delete this cookbook" %> 
+<table style = "margin-left:160px">
+<tr>
+  <td>
+  <%= button_to "Add new recipe", edit_cook_book_path,  method: :get, class: "btn btn-success" %><br>
+  </td>
+ <tr>
+  <td>
+  <%= form_for @cook_book, method: :delete do |form| %>
+  <%= form.submit "Delete this cookbook" %> 
 <% end %> 
+  </td>
+  </tr> 
+</tr>
+</table>
