--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -1,13 +1,13 @@
 <p>
 <p>
-<h1 class = "text-center">All Recipes</h1>
+<h1 class = "text-center " >All Recipes</h1>
 <p>
 <ul>
 
   <% @recipes.each do |recipe| %>
-    <li><h4><%= link_to "#{recipe.name}", recipe_path(recipe)%></h4></li>
-    <p> <%= recipe.likes%> Liked! </p>
-    <p><small>Ingredients: 
+    <h4 class = "text-center"><%= link_to "#{recipe.name}", recipe_path(recipe)%></h4>
+    <p class = "text-center "> <%= recipe.likes%> Liked! </p>
+    <p class = "text-center "><small>Ingredients: 
     <% recipe.ingredients.each do | ingredient |%>
       <%= link_to "#{ingredient.name}", ingredient_path(ingredient)%>,
     <% end %></small></p>
