different navbar for current user and new user.

--- a/app/views/cook_books/edit.html.erb
+++ b/app/views/cook_books/edit.html.erb
@@ -1,4 +1,4 @@
-<h1>Manage my <%= @cook_book.name %> CookBook</h1>
+<h1>Manage CookBook: <%= @cook_book.name %> </h1>
 
 <%= form_for @cook_book do |form| %>
 <%= form.label "Add a recipe" %><br>
