--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -35,6 +35,6 @@
     </div>
 
 
-    <p><%= form.submit "Sign Up", class: "btn btn-primary" %>
+    <p><%= form.submit "Confirm Editing", class: "btn btn-primary" %>
 <% end %>
 </ul>
