--- a/app/views/recipes/new.html.erb
+++ b/app/views/recipes/new.html.erb
@@ -35,7 +35,7 @@
     <div class="form-group row">
         <div class ="col-auto">  
             <h4><% form.label "Ingredients" %>Select from currently available ingredients:</h4>
-            <p></p><%= form.collection_check_boxes :ingredient_ids, Ingredient.all, :id, :name %>
+            <p><%= form.collection_check_boxes :ingredient_ids, Ingredient.all, :id, :name %>
             <p>
             <h4><% form.label "Ingredients" %>Add new ingredients:</h4>
             <p><%= form.fields_for :ingredients, @recipe.ingredients.build do |ingredients_fields| %>
