--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,12 +1,15 @@
 <h1>My Kitchen</h1>
 <% if current_user %>
  <strong>Logged in as <%= current_user.username %></strong>
+ <p><%= link_to "Edit my profile", edit_user_path,  method:"get" %>
+
 <% end %>
 <br>
 <br>
 <br>
 <br>
 <br>
+
 
 <h4>My Cookbook</h4>
 <% @user.cook_books.each do |cook_book|%></p>
@@ -16,14 +19,16 @@
 <br>
 <br>
 <h3><%= button_to "Create a new cookbook", new_cook_book_path,  method:"get", class: "btn btn-success" %></h3>
+<p>
 <h3><%= button_to "Create a new recipe", new_recipe_path,  method:"get", class: "btn btn-success" %></h3>
 
 
-<h4>All Recipes Submitted by Me</h4>
+<h4>All My Recipes</h4>
 <% @user.recipes.each do |recipe|%></p>
-    <p><%= recipe.name %>
+    <p><%= link_to recipe.name, recipe_path(recipe) %>
 <%end%>
  
 </ul>
 
-<%= button_to "Log out", session_path("current"),  method:"delete", class: "btn btn-success" %>
+
+<p><%= button_to "Log out", session_path("current"),  method:"delete",  data: { confirm: 'Are you sure?' }, class: "btn btn-success" %>
